[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/assets/pan.png" type="Texture" id=1]
[ext_resource path="res://source/scripts/crafting_menu.gd" type="Script" id=2]
[ext_resource path="res://source/assets/egg.png" type="Texture" id=3]

[node name="crafing_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pan" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -80.0
margin_right = 138.0
margin_bottom = 70.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_frames" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -120.0
margin_right = 178.0
margin_bottom = -88.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_0" type="TextureRect" parent="item_frames"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_1" type="TextureRect" parent="item_frames"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_2" type="TextureRect" parent="item_frames"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_3" type="TextureRect" parent="item_frames"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_4" type="TextureRect" parent="item_frames"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_5" type="TextureRect" parent="item_frames"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_6" type="TextureRect" parent="item_frames"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_7" type="TextureRect" parent="item_frames"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_8" type="TextureRect" parent="item_frames"]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="item_9" type="TextureRect" parent="item_frames"]
margin_left = 324.0
margin_right = 356.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="button_start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 100.0
margin_right = 20.0
margin_bottom = 120.0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_close" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 188.0
margin_top = -160.0
margin_right = 208.0
margin_bottom = -140.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button_start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="button_close" to="." method="_on_close_pressed"]
